Continued work on the MLW example.

--- a/examples/multimodal_testing.ipynb
+++ b/examples/multimodal_testing.ipynb
@@ -103,7 +103,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from qinfer.abstract_model import Model\n",
       "from qinfer.test_models import SimplePrecessionModel\n",
+      "from qinfer.derived_models import BinomialModel\n",
       "from qinfer.distributions import UniformDistribution\n",
       "from qinfer.smc import SMCUpdater\n",
       "from qinfer.resamplers import LiuWestResampler"
@@ -111,7 +113,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 56
+     "prompt_number": 61
     },
     {
      "cell_type": "heading",
@@ -337,6 +339,166 @@
       }
      ],
      "prompt_number": 54
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Mutliparameter Models"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We also want to try with a multicos model, since that model admits a degeneracy between parameters that is broken by experimental variety. To arrive at a good estimate, then, a resampler must preserve unusual posterior structures that arise in the approach to a unimodal final posterior.\n",
+      "\n",
+      "It's worth noting here that the traditional LW parameters work quite well for a better experimental protocol (choosing lots of varied experiments), but that this protocol may not always be available. Thus, MLW is a resource here to compensate for experimental restrictions."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "class MultiCosModel(Model):\n",
+      "    \n",
+      "    @property\n",
+      "    def n_modelparams(self):\n",
+      "        return 2\n",
+      "    \n",
+      "    @property\n",
+      "    def is_n_outcomes_constant(self):\n",
+      "        return True\n",
+      "    def n_outcomes(self, expparams):\n",
+      "        return 2\n",
+      "    \n",
+      "    def are_models_valid(self, modelparams):\n",
+      "        return np.all(np.logical_and(modelparams > 0, modelparams <= 1), axis=1)\n",
+      "    \n",
+      "    @property\n",
+      "    def expparams_dtype(self):\n",
+      "        return [('ts', '2float')]\n",
+      "    \n",
+      "    def likelihood(self, outcomes, modelparams, expparams):\n",
+      "        # We first call the superclass method, which basically\n",
+      "        # just makes sure that call count diagnostics are properly\n",
+      "        # logged.\n",
+      "        super(MultiCosModel, self).likelihood(outcomes, modelparams, expparams)\n",
+      "        \n",
+      "        # Next, since we have a two-outcome model, everything is defined by\n",
+      "        # Pr(0 | modelparams; expparams), so we find the probability of 0\n",
+      "        # for each model and each experiment.\n",
+      "        #\n",
+      "        # We do so by taking a product along the modelparam index (len 2,\n",
+      "        # indicating omega_1 or omega_2), then squaring the result.\n",
+      "        pr0 = np.prod(\n",
+      "            np.cos(\n",
+      "                # shape (n_models, 1, 2)\n",
+      "                modelparams[:, np.newaxis, :] *\n",
+      "                # shape (n_experiments, 2)\n",
+      "                expparams['ts']\n",
+      "            ), # <- broadcasts to shape (n_models, n_experiments, 2).\n",
+      "            axis=2 # <- product over the final index (len 2)\n",
+      "        ) ** 2 # square each element\n",
+      "        \n",
+      "        # Now we use pr0_to_likelihood_array to turn this two index array\n",
+      "        # above into the form expected by SMCUpdater and other consumers\n",
+      "        # of likelihood().\n",
+      "        return Model.pr0_to_likelihood_array(outcomes, pr0)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 60
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mp_model = BinomialModel(MultiCosModel())\n",
+      "mp_prior = UniformDistribution([[0, 1]]*2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 148
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def multicos_trial(a, h, n_exps=200):\n",
+      "    true = mp_prior.sample()\n",
+      "    mp_updater = SMCUpdater(mp_model, 2000, mp_prior,\n",
+      "        resampler=LiuWestResampler(a=a, h=h, debug=True),\n",
+      "        debug_resampling=True\n",
+      "    )\n",
+      "    \n",
+      "    while True:\n",
+      "        exp = np.array([(20 * np.pi * np.random.random(2), 10)], dtype=mp_model.expparams_dtype)\n",
+      "        # To test the resampler, we take data according to one experiment design until it has to resample, then switch.\n",
+      "        # Since the MLW resampler works quite well, we need to set an upper limit.\n",
+      "        for idx in xrange(500):\n",
+      "            datum = mp_model.simulate_experiment(true, exp)\n",
+      "            mp_updater.update(datum, exp)\n",
+      "            \n",
+      "            if len(mp_updater.data_record) >= n_exps:\n",
+      "                return true, mp_updater.est_mean()\n",
+      "            \n",
+      "            if mp_updater.just_resampled and idx >= 100:\n",
+      "                break\n",
+      "            "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 149
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def mp_risk(a, h, n_trials=10):\n",
+      "    mp_errors = np.empty((n_trials,))\n",
+      "    for idx_trial in xrange(n_trials):\n",
+      "        true, est = multicos_trial(a, h)\n",
+      "        mp_errors[idx_trial] = np.sum((true - est)**2)\n",
+      "        \n",
+      "    return np.mean(mp_errors)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 150
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print mp_risk(1, 0.02, 50)\n",
+      "print mp_risk(0.98, None, 50)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.166501991403\n",
+        "0.241412182524"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 151
     },
     {
      "cell_type": "code",
