--- a/examples/multimodal_testing.ipynb
+++ b/examples/multimodal_testing.ipynb
@@ -363,9 +363,13 @@
      "input": [
       "class MultiCosModel(Model):\n",
       "    \n",
+      "    def __init__(self, n_terms=2):\n",
+      "        self._n_terms = n_terms\n",
+      "        super(MultiCosModel, self).__init__()\n",
+      "    \n",
       "    @property\n",
       "    def n_modelparams(self):\n",
-      "        return 2\n",
+      "        return self._n_terms\n",
       "    \n",
       "    @property\n",
       "    def is_n_outcomes_constant(self):\n",
@@ -378,7 +382,7 @@
       "    \n",
       "    @property\n",
       "    def expparams_dtype(self):\n",
-      "        return [('ts', '2float')]\n",
+      "        return [('ts', '{}float'.format(self._n_terms))]\n",
       "    \n",
       "    def likelihood(self, outcomes, modelparams, expparams):\n",
       "        # We first call the superclass method, which basically\n",
@@ -410,19 +414,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 60
+     "prompt_number": 160
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mp_model = BinomialModel(MultiCosModel())\n",
-      "mp_prior = UniformDistribution([[0, 1]]*2)"
+      "mp_model = BinomialModel(MultiCosModel(3))\n",
+      "mp_prior = UniformDistribution([[0, 1]]*3)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 148
+     "prompt_number": 161
     },
     {
      "cell_type": "code",
@@ -436,7 +440,7 @@
       "    )\n",
       "    \n",
       "    while True:\n",
-      "        exp = np.array([(20 * np.pi * np.random.random(2), 10)], dtype=mp_model.expparams_dtype)\n",
+      "        exp = np.array([(20 * np.pi * np.random.random(3), 40)], dtype=mp_model.expparams_dtype)\n",
       "        # To test the resampler, we take data according to one experiment design until it has to resample, then switch.\n",
       "        # Since the MLW resampler works quite well, we need to set an upper limit.\n",
       "        for idx in xrange(500):\n",
@@ -453,52 +457,108 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 149
+     "prompt_number": 180
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def mp_risk(a, h, n_trials=10):\n",
-      "    mp_errors = np.empty((n_trials,))\n",
-      "    for idx_trial in xrange(n_trials):\n",
-      "        true, est = multicos_trial(a, h)\n",
-      "        mp_errors[idx_trial] = np.sum((true - est)**2)\n",
-      "        \n",
-      "    return np.mean(mp_errors)"
+      "def nanmean(arr):\n",
+      "    return np.nansum(arr) / np.sum(np.isfinite(arr))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 150
+     "prompt_number": 181
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print mp_risk(1, 0.02, 50)\n",
-      "print mp_risk(0.98, None, 50)"
+      "def mp_risk(a, h, n_trials=10, n_exps=200):\n",
+      "    mp_errors = np.empty((n_trials,))\n",
+      "    for idx_trial in xrange(n_trials):\n",
+      "        true, est = multicos_trial(a, h, n_exps)\n",
+      "        mp_errors[idx_trial] = np.sum((true - est)**2)\n",
+      "        \n",
+      "    n_nan = np.sum(np.isnan(mp_errors))\n",
+      "    if n_nan > 0:\n",
+      "        print \"{} NaNs observed.\".format(n_nan)\n",
+      "        \n",
+      "    return nanmean(mp_errors)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 182
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print mp_risk(1, 0.01, 25, 600)\n",
+      "print mp_risk(0.98, None, 25, 600)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
        "output_type": "stream",
-       "stream": "stdout",
+       "stream": "stderr",
        "text": [
-        "0.166501991403\n",
-        "0.241412182524"
+        "/usr/lib/python2.7/site-packages/qinfer/smc.py:228: ApproximationWarning: Extremely small n_ess encountered (5.67487132761). Resampling is likely to fail. Consider adding particles, or resampling more often.\n",
+        "  ApproximationWarning\n",
+        "/usr/lib/python2.7/site-packages/qinfer/smc.py:228: ApproximationWarning: Extremely small n_ess encountered (8.36267442448). Resampling is likely to fail. Consider adding particles, or resampling more often.\n",
+        "  ApproximationWarning\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/usr/lib/python2.7/site-packages/qinfer/smc.py:228: ApproximationWarning: Extremely small n_ess encountered (3.32659928482). Resampling is likely to fail. Consider adding particles, or resampling more often.\n",
+        "  ApproximationWarning\n",
+        "/usr/lib/python2.7/site-packages/qinfer/smc.py:228: ApproximationWarning: Extremely small n_ess encountered (3.73038752739). Resampling is likely to fail. Consider adding particles, or resampling more often.\n",
+        "  ApproximationWarning\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/usr/lib/python2.7/site-packages/qinfer/smc.py:228: ApproximationWarning: Extremely small n_ess encountered (8.54272877222). Resampling is likely to fail. Consider adding particles, or resampling more often.\n",
+        "  ApproximationWarning\n",
+        "/usr/lib/python2.7/site-packages/qinfer/smc.py:228: ApproximationWarning: Extremely small n_ess encountered (4.03095116488). Resampling is likely to fail. Consider adding particles, or resampling more often.\n",
+        "  ApproximationWarning\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n"
+        "1 NaNs observed.\n",
+        "0.345962915808\n",
+        "3 NaNs observed."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "0.44069194744\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/usr/lib/python2.7/site-packages/qinfer/smc.py:228: ApproximationWarning: Extremely small n_ess encountered (3.35181765289). Resampling is likely to fail. Consider adding particles, or resampling more often.\n",
+        "  ApproximationWarning\n"
        ]
       }
      ],
-     "prompt_number": 151
+     "prompt_number": 187
     },
     {
      "cell_type": "code",
